# FBNeo

./: .gitignore  README.md  requirements.txt
ai/: setup.cfg  setup.py
ai/src/third_strike_ai/: __init__.py  constants.py  environments.py  main.py
ai/src/third_strike_ai/envs/: __init__.py  third_strike.py
ai/third_strike_ai/: __main__.py
projectfiles/xcode/Emulator/: AppDelegate.m  Defaults.plist  Emulator-Bridging-Header.h  initial_state.fs  main.m  main.swift  sfiii3nr1.fs
projectfiles/xcode/Emulator.xcodeproj/: project.pbxproj
projectfiles/xcode/Emulator.xcodeproj/xcshareddata/xcschemes/: Emulator.xcscheme
projectfiles/xcode/Emulator/Base.lproj/: MainMenu.xib
projectfiles/xcode/Emulator/Controllers/: FBEmulatorController.h  FBEmulatorController.m
python/: server.py
src/burner/: gami.cpp
src/burner/macos/: FBMainThread+Etc.mm  FBMainThread.h  FBMainThread.mm  main.cpp
src/burner/sdl/: run.cpp
src/intf/: cli_settings.c  cli_settings.h  remote.c  remote.h
src/intf/input/macos/: FBInput.mm
src/intf/video/macos/: FBVideo.mm
