[metadata]
name = third-strike-ai
version = 0.0.1

[options]
package_dir=
    =src

packages = find:

install_requires =
    gymnasium
    torch
    torchvision
    pillow
    numpy
    typer
    jupyterlab

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    third-strike-ai = third_strike_ai.main:app
